--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pbl3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Huyhehe/PBL3",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.2.3",
     "json-server": "^0.17.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
