--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.26.1",
     "babel-import-plugin": "^1.0.0",
+    "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
     "json-server": "^0.17.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^3.2.0",
     "vue-unicons": "^3.3.1",
     "vuex": "^3.4.0",
@@ -36,7 +38,8 @@
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
     "style-resources-loader": "^1.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
